# ECEn_631_Group_1

./: .gitignore  JustinsCode.cpp  README.md  camera_settings.gpfl  ecen_631_project1.cpp
ball_catcher/: CMakeLists.txt  HardWare.cpp  writeup.odt
ball_catcher/include/ball_catcher/: estimate_trajectory.h  estimate_trajectory_hw.h
ball_catcher/params/: left_cam.yaml  right_cam.yaml  stereo.yaml
ball_catcher/python/: trajectory_estimator.py
ball_catcher/src/: estimate_trajectory.cpp  estimate_trajectory_hw.cpp  main.cpp
media/: bread_stick.avi  rye_bread.avi
plinko/: CMakeLists.txt  camera_filters.cpp  main.cpp  tennisDetector_vid.py
plinko/basic/: CMakeLists.txt  basic  basic.cpp  makefile  serial  serial.cpp
plinko/revised/: CMakeLists.txt  plinko.cpp
visual_inspection/: CMakeLists.txt  diff_activate.py  ecen_631_project1.cpp
visual_inspection/media/: chex.avi  ring_pretzle_test.avi
